<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_call"
        android:enabled="true"
        android:icon="@drawable/ic_dialpad"
        android:title="@string/text_menu_call"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_contact"
        android:enabled="true"
        android:icon="@drawable/ic_contacts"
        android:title="@string/text_menu_contract"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_theme"
        android:enabled="true"
        android:icon="@drawable/ic_themes"
        android:title="@string/text_menu_theme"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/text_menu_history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_setting"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/text_menu_setting"
        app:showAsAction="ifRoom" />
</menu>